<resources>
    <string name="app_name">ECT Voting</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Registration failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="full_name_hint">Full Name</string>
    <string name="national_id">National ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="capture_face">Capture Face</string>
    <string name="wrong_credentials">Email or Password is incorrect</string>
    <string name="no_user_found">There\'s no account linked to this email addresss</string>
    <string name="email_in_use">" The email address is already in use by another account"</string>
    <string name="network_error">Network Error : Please check your internet connnection</string>
    <string name="face_recognition_failed">Face RecognitionFailed</string>
    <string name="pick_your_candidate">Pick your candidate :</string>
    <string name="edit_choice">Edit choice</string>
    <string name="you_already_voted_to">You already voted to :</string>
    <string name="vote">Vote</string>
    <string name="clear">Clear</string>
    <string name="fetching_candidates_failed">Something went wrong while fetching candidates</string>
    <string name="voting_failed">Voting failed</string>
    <string name="voting">Voting...</string>
    <string name="revoting">Revoting</string>
    <string name="voting_successful">Voted successfully</string>
    <string name="select_your_candidate">Please select your candidate</string>
    <string name="logout">Logout</string>
    <string name="logging_out">Logging out....</string>
    <string name="logout_successful">Logged out successfully</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="confirm_password_mismatch">Should match password</string>
    <string name="full_name_cant_be_empty">Full name can\'t be empty</string>
    <string name="nat_id_name_cant_be_empty">National ID can\'t be empty</string>
    <string name="capture_face_prompt">Please click CAPTURE FACE button to take your picture</string>
    <string name="confirm_your_face_is_clearly_visible">Confirm your face is clearly visible</string>
    <string name="logging_in">Logging in....</string>
    <string name="registering">Registering....</string>
</resources>