<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBkColor"
    android:focusableInTouchMode="true"
    tools:context=".ui.authentication.login.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/app_name" />

            <androidx.cardview.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/loginCardRadius"
                android:elevation="5dp"
                tools:showIn="@layout/activity_login"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginBottom="@dimen/loginViewsMargin"
                android:background="@color/cardColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">
                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:layout_marginTop="@dimen/loginViewsMargin"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textInputFullName"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/modifiedEditText"
                            android:id="@+id/editTextFullName"
                            android:inputType="text"
                            android:maxLines="1"
                            android:hint="@string/full_name_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textInputNatID"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/modifiedEditText"
                            android:id="@+id/editTextNatID"
                            android:inputType="number"
                            android:maxLines="1"
                            android:hint="@string/national_id"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textInputEmail"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/modifiedEditText"
                            android:id="@+id/editTextEmail"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/login_email_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textInputPassword"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/modifiedEditText"
                            android:id="@+id/editTextPassword"
                            android:inputType="numberPassword"
                            android:maxLines="1"
                            android:hint="@string/login_password_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textInputConfirmPassword"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/modifiedEditText"
                            android:id="@+id/editTextConfirmPassword"
                            android:inputType="numberPassword"
                            android:maxLines="1"
                            android:hint="@string/confirm_password"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/faceCaptureButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/capture_face"
                        app:icon="@android:drawable/ic_menu_camera" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/register"
                        android:layout_marginTop="@dimen/loginViewsMargin"/>

                    <Button
                        android:id="@+id/sign_in_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_login_hint"
                        android:textColor="?android:attr/colorPrimary"
                        android:textSize="@dimen/newsMoreTextSize"
                        android:layout_gravity="center"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
